<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:theme="@style/ToolbarTheme"
        android:translationZ="1dp"
        app:titleTextColor="@android:color/white">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight"
        tools:context=".ui.MainActivity">

        <ImageView
            android:id="@+id/detail_overlayAvatar"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:foreground="@drawable/image_overlay"
            android:transitionName="@string/transition"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/detail_avatarContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            app:cardCornerRadius="50dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/detail_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detail_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/colorLight"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_avatarContainer" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/colorLight"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_login" />

        <TextView
            android:id="@+id/detail_followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/followers"
            android:textAllCaps="true"
            android:textColor="@color/colorGray"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/detail_following"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_followersCount" />

        <TextView
            android:id="@+id/detail_followersCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorLight"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            app:layout_constraintStart_toStartOf="@+id/detail_followers"
            app:layout_constraintEnd_toEndOf="@+id/detail_followers" />

        <TextView
            android:id="@+id/detail_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/following"
            android:textAllCaps="true"
            android:textColor="@color/colorGray"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/detail_repositories"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/detail_followers"
            app:layout_constraintTop_toBottomOf="@+id/detail_followingCount" />

        <TextView
            android:id="@+id/detail_followingCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorLight"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            app:layout_constraintStart_toStartOf="@+id/detail_following"
            app:layout_constraintEnd_toEndOf="@+id/detail_following" />

        <TextView
            android:id="@+id/detail_repositories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/repositories"
            android:textAllCaps="true"
            android:textColor="@color/colorGray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/detail_following"
            app:layout_constraintTop_toBottomOf="@+id/detail_repositoriesCount" />

        <TextView
            android:id="@+id/detail_repositoriesCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorLight"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            app:layout_constraintStart_toStartOf="@+id/detail_repositories"
            app:layout_constraintEnd_toEndOf="@+id/detail_repositories" />

        <ImageView
            android:id="@+id/detail_locationIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_map"
            android:tint="@color/colorGray"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_overlayAvatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_location" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/user_has_no_location"
            android:textSize="16sp"
            android:gravity="start"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/detail_locationIcon"
            app:layout_constraintBottom_toBottomOf="@+id/detail_locationIcon"
            app:layout_constraintStart_toEndOf="@id/detail_locationIcon"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/detail_emailIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_email"
            android:tint="@color/colorGray"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_locationIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_email" />

        <TextView
            android:id="@+id/detail_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/user_has_no_email"
            android:textSize="16sp"
            android:gravity="start"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/detail_emailIcon"
            app:layout_constraintBottom_toBottomOf="@+id/detail_emailIcon"
            app:layout_constraintStart_toEndOf="@id/detail_emailIcon"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
